--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "swiper": "^3.4.2",
     "vue": "^2.2.6",
     "vue-awesome-swiper": "^2.4.0",
     "vue-base64-file-upload": "^1.0.4",
