--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "jsonp": "^0.2.1",
     "swiper": "^3.4.2",
     "vue": "^2.2.6",
-    "vue-awesome-swiper": "^2.4.0",
     "vue-base64-file-upload": "^1.0.4",
     "vue-cli": "^2.8.1",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "webpack-encoding-plugin": "^0.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -27,6 +28,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
